# patent

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  api.py  config.py  docker-entrypoint.sh  main.py  pyproject.toml  render.yaml  requirements.txt  test.py  二通.docx
.claude/: settings.local.json
assets/: 查询语法指南.md  检索策略指南.md
backend/: __init__.py  admin_auth.py  auth.py  error_handlers.py  log_context.py  logging_setup.py  main.py  models.py  system_logs.py  task_usage_tracking.py  time_utils.py  token_pricing.py  usage.py  utils.py  wechat_delivery_events.py  wechat_gateway_state.py  wechat_runtime.py
data/: tasks.db
docs/: ai-reply-reconstruction-plan.md
frontend/: .env.example  .gitignore  DESIGN_GUIDE.md  README.md  deploy-to-cloudflare.sh  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
im-gateway/: README.md  backend_client.py  credential_store.py  main.py
im_gateway/: README.md  __init__.py  backend_client.py  credential_store.py  main.py  reply_probe.py  upload_probe.py  wechatbot_compat.py
src/: executor.py  generator.py  knowledge.py  llm.py  parser.py  renderer.py  search.py  transformer.py  vision.py
tests/: test_account_month_target.py  test_admin_entities_api.py  test_admin_usage.py  test_ai_reply_amendment_strategy.py  test_ai_reply_amendment_tracking.py  test_ai_reply_claim_review_drafting.py  test_ai_reply_common_knowledge_followup.py  test_ai_reply_document_processing.py  test_ai_reply_final_report_render.py  test_ai_reply_r2_upload.py  (+93 more)
(+533 files in other folders)
