[project]
name = "patent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jieba>=0.42.1",
    "langgraph>=1.0.6",
    "markdown>=3.10",
    "mineru[all]>=2.7.1",
    "openai>=2.14.0",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "playwright>=1.57.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
