[project]
name = "patent"
version = "1.1.0"
description = "AI 专利审查助手"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.0",
    "fastapi>=0.128.0",
    "langgraph>=1.0.6",
    "markdown>=3.10",
    "mineru[all]>=2.7.1",
    "openai>=2.14.0",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "playwright>=1.57.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
